fix mobile spacing

--- a/less/base.less
+++ b/less/base.less
@@ -70,7 +70,7 @@ body{
 		}
 	}
 	.spacer{
-		min-height:400px;
+		min-height:300px;
 	}
 	//Prev Work Callouts
 	.prev-work{
